# critical-path-check

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
.cargo/: config.toml
.github/: renovate.json
.github/actions/setup/: action.yml
.github/workflows/: CI.yml  build.yml  release.yml  test.yml
__test__/: cli.spec.ts  index.spec.ts  library.spec.ts
benchmark/: bench.ts
fixtures/test-portfolio/: index.html
fixtures/test-portfolio/assets/: MathUtils-DiN6UX3T.js  Textures-iK-qAZTJ.js  gsap-b4RP9EQ6.js  index-09cmykHC.css  index-38mSDckT.css  index-8e1KlR0G.css  index-Bd0LD9vz.js  index-GLOTJ7v4.js  index-INH1LiQF.js  index-KVHO2UnL.js  index-LgaXpArJ.js  index-Ru5OWVDG.css  index-ZM52A68i.js  index-_FbNJ7xY.js  index-_WtbZC1S.js  index-_YjuktDa.css  index-a6IuKmo9.js  index-aKmXtfXz.css  index-bWaCC1tV.js  index-es0_e-Jo.js  index-i49QiT1e.css  index-iNVhCL1J.js  index-mptBGf_x.css  index-oRLbKLs8.css  index-sgvvbS2W.css  index-tF_S6l4Q.css  index-vSkINqBJ.js  index-wEOvbuJm.css  index-yUah-yw2.js  three-_vvEHZTK.js  threeDrei-jPcrdQkF.js  threeFiber-C7PdTxs4.js  threeStdLib-Js3c5gj8.js  useLabsLoader-qtw6trdU.js  useMenuButtonDelay-DTbhGK4h.css  useMenuButtonDelay-x9j-B28L.js
fixtures/test-with-errors/: index.html  thing.js
fixtures/test-with-errors/assets/: String-TCAWuh-O.js  index-CQvDEkyF.css  index-tusZLV-l.js
internals/: lib.rs  main.rs
internals/argv/: argv.rs
internals/bindings/: Cargo.toml  async_analyze.rs  async_assert.rs  async_assert_css.rs  async_assert_html.rs  async_assert_javascript.rs  async_cli.rs  async_measure.rs  critical_path_analysis.rs  lib.rs  unwind_panic.rs
internals/core/: Cargo.toml  lib.rs  main.rs
internals/core/argv/: argv.rs
internals/core/critical_path_check/: critical_path_check.rs  critical_resources.rs
internals/core/errors/: errors.rs
internals/core/logger/: logger.rs
internals/core/parsers/: asset_parser.rs  critical_path_parser.rs  css_parser.rs  file_paths.rs  html_parser.rs  javascript_parser.rs  mod.rs
internals/core/visitor/: directory_scope.rs  explored_paths.rs  file_resolution_strategy.rs  mod.rs  path_store.rs  search_state.rs  visitor.rs
internals/critical_path_check/: critical_path_check.rs  critical_resources.rs  json_result.rs  mod.rs
internals/dependency_graph/: dependency_graph.rs  mod.rs  path_collector.rs
internals/logger/: logger.rs
internals/parsers/: asset_parser.rs  critical_path_parser.rs  css_parser.rs  file_paths.rs  html_parser.rs  javascript_parser.rs  mod.rs  search_state.rs  traverser.rs
internals/visitor/: directory_scope.rs  mod.rs  search_state.rs
internals/wasm/: Cargo.toml  lib.rs
internals/wasm/src/: lib.rs
internals/wasm/src/structs/: critical_path.rs  mod.rs
internals/wasm/structs/: critical_path.rs
release/: Release.ts  run.ts
