[package]
name = "critical-path-check"
version = "1.1.2"
edition = "2024"
description = "A critical path measurement tool designed for both local and remote builds"
license = "MIT"
readme = "README.md"
authors = ["Alex Figliolia"]
homepage = "https://github.com/alexfigliolia/critical-path-check"
repository = "https://github.com/alexfigliolia/critical-path-check"
keywords = [
  "ui",
  "critical-path",
  "web-performance",
  "frontend",
  "performance-checks",
]

[[bin]]
name = "critical-path-check"
path = "internals/main.rs"

[lib]
name = "critical_path_check"
path = "internals/lib.rs"

[dependencies]
async-recursion = "1.1.1"
colored = "3.1.1"
dashmap = "6.1.0"
fancy-regex = "0.18.0"
minreq = { version = "2.14.1", features = ["https"] }
normalize-path = "0.2.1"
regex = "1.12.3"
tokio = { version = "1.52.1", features = ["full"] }
