
[package]
edition = "2021"
name = "bindings"
version = "1.1.4"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
critical-path-check = { version = "1.1.4", path = "../core" }
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
