
[package]
edition = "2021"
name = "bindings"
version = "1.2.0"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
critical-path-check = { version = "1.2.0", path = "../core" }
napi = "3.8.6"
napi-derive = "3.5.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
