[package]
name = "critical-path-check"
version = "1.0.0"
edition = "2024"
description = "A critical path measurement tool designed for both local and remote builds"
license = "MIT"
readme = "README.md"
authors = ["Alex Figliolia"]
homepage = "https://github.com/alexfigliolia/critical-path-check"
repository = "https://github.com/alexfigliolia/critical-path-check"
keywords = [
  "ui",
  "critical-path",
  "web-performance",
  "frontend",
  "performance-checks",
]

[[bin]]
name = "critical-path-check"
path = "main.rs"

[lib]
name = "critical_path_check"
path = "lib.rs"


[dependencies]
colored = "3.1.1"
futures = "0.3.32"
html-ast = "0.1.0"
htmler = "0.1.1"
lightningcss = "1.0.0-alpha.71"
normalize-path = "0.2.1"
reqwest = { version = "0.13.2", features = ["blocking"] }
swc_common = "21.0.1"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "38.0.2"
tokio = { version = "1.52.0", features = ["full"] }
url = "2.5.8"
