[package]
name = "wasm"
version = "1.0.0"
edition = "2024"
description = "A critical path measurement tool designed for both local and remote builds"
license = "MIT"
readme = "../README.md"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
critical-path-check = { path = "../core" }
napi = { version = "3.8.4", features = ["async"] }
napi-derive = "3.5.3"

[build-dependencies]
napi-build = "2.3.1"
