[package]
name = "critical-path"
version = "0.1.0"
description = "A critical path analysis tool powered by rust"
authors = ["Alex Figliolia"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
critical-path-check = { path = "../core" }
