[package]
name = "critical-path"
version = "0.1.0"
description = "A critical path analysis tool powered by rust"
authors = ["Alex Figliolia"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.1"
critical-path-check = { path = "../core" }
